pygeon/themes/pygeon/static/css/main.css
img {
	max-width: 100%;
}

/* light mode */
:root {
   --body-bg: #ffffff;
   --body-bg1: #dedede;
   --body-bg2: #aaa;
   --body-bg3: #eee;
   --body-bg4: #cecece;
   --body-colour: #000000;
   --body-secondary-colour: #6a6a6a;
   --link-colour: #1976d2;
   --svg-link-colour: invert(44%) sepia(62%) saturate(6300%) hue-rotate(196deg) brightness(91%) contrast(81%);
   --svg-colour-filter: none;
}

/* dark mode */
@media (prefers-color-scheme: dark) {
   :root {
	   --body-bg: #161616;
	   --body-bg1: #262626;
	   --body-bg2: #363636;
	   --body-bg3: #464646;
	   --body-bg4: #565656;
       --body-color: rgba(255,255,255,0.87);
	   --body-secondary-colour: rgba(255,255,255,0.6);
	   --link-colour: #64b5f6;
	   --svg-link-colour: invert(59%) sepia(78%) saturate(454%) hue-rotate(178deg) brightness(100%) contrast(93%);
	   --svg-colour-filter: invert(87%);
   }
   img {
	   filter: brightness(.8) contrast(1.2);
   }
}

:root.dark {
   --body-bg: #161616;
   --body-bg1: #262626;
   --body-bg2: #363636;
   --body-bg3: #464646;
   --body-bg4: #565656;
   --body-colour: rgba(255,255,255,0.87);
   --body-secondary-colour: rgba(255,255,255,0.6);
   --link-colour: #64b5f6;
   --svg-link-colour: invert(59%) sepia(78%) saturate(454%) hue-rotate(178deg) brightness(100%) contrast(93%);
   --svg-colour-filter: invert(87%);
}

.dark img {
	filter: brightness(.8) contrast(1.2);
}

/*
 * Utility class to hide content visually while keeping it screen reader-accessible.
 * Source: https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html
 */

.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* Fix scroll bar jumping issue */
html {
	overflow-y: scroll;
}

/* Set base fonts */
html {
	/* System Fonts as used by GitHub */
	font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
	font-size: 18px;
	color: var(--body-colour);
	background: var(--body-bg);
}

a {
	color: var(--link-colour);
}

.article-excerpt,
.article-content {
	/* taken from gwern */
	font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
	line-height: 1.6;
}

code, pre {
	font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
}

.main-and-sidebar-wrapper > aside {
	font-size: .9rem;
}

body > footer {
	font-size: .8em;
	color: var(--body-secondary-colour);
}

body > footer a:visited,
body > footer a:link,
body > footer a:active,
body > footer a {
	color: var(--body-colour);
}

@media screen and (max-width: 767px) {
	html {
		font-size: 16px;
	}
	.main-and-sidebar-wrapper > aside {
		font-size: inherit;
	}
}


/* Beginning of main layout for a desktop screen */
body {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
	align-items: center;
}

.main-and-sidebar-wrapper {
	flex: 1;
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
	align-content: flex-start;
	column-gap: 50px;
	max-width: 1200px;
	width: 100%;
}

.main-and-sidebar-wrapper > *,
body > footer {
	padding: 10px;
	box-sizing: border-box;
}

.main-and-sidebar-wrapper > header {
	flex: 1 100%;
	min-height: 80px;
}

.main-and-sidebar-wrapper > nav.breadcrumbs {
	flex: 1 100%;
	padding-bottom: 0;
}

.main-and-sidebar-wrapper > main {
	margin-top: 1em;
	flex: 2 0 0;
	overflow: hidden;
}

.main-and-sidebar-wrapper.no-sidebar > main {
	max-width: 800px;
}

@media screen and (max-width: 1200px) {
	.main-and-sidebar-wrapper {
		max-width: 100%;
	}
}

@media screen and (max-width: 800px) {
	.main-and-sidebar-wrapper.no-sidebar > main {
		max-width: 100%;
	}
}

.main-and-sidebar-wrapper > aside {
	margin-top: 1em;
	flex: 0.9 0 0;
	overflow: hidden;
}

body > footer {
	width: 100%;
	max-width: 1200px;
}
/* End of main layout for a desktop screen */

/* Beginning of main layout for a tablet screen */
@media screen and (max-width: 1024px) {
}
/* End of main layout for a tablet screen */

/* Beginning of main layout for a mobile screen */
@media screen and (max-width: 767px) {
	.main-and-sidebar-wrapper > main,
	.main-and-sidebar-wrapper > aside {
		flex: 1 100%;
	}
}
/* End of main layout for a mobile screen */

/* 1. Header */
.main-and-sidebar-wrapper > header {
	display: flex;
	width: 100%;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.main-and-sidebar-wrapper > header a:link,
.main-and-sidebar-wrapper > header a:visited,
.main-and-sidebar-wrapper > header a:active {
	color: var(--body-colour);
	text-decoration: none;
}

.main-and-sidebar-wrapper > header {
	border-bottom: 1px solid var(--body-bg1);
}

@media screen and (max-width: 767px) {
	.main-and-sidebar-wrapper > header {
		padding: 0;
		flex-wrap: wrap;
		/*justify-content: flex-start;*/
		align-items: center;
	}
}

/* 1.1 Logo */
.main-and-sidebar-wrapper > header > section > a {
	font-size: 1.6rem;
	font-weight: 700;
}

.main-and-sidebar-wrapper > header > section > p {
	margin: 0;
	font-size: .8rem;
	color: var(--body-secondary-colour);
}

.main-and-sidebar-wrapper > header > button {
	display: none;
	min-width: 60px;
	min-height: 60px;
}

#theme-switch {
	flex-grow: 1;
	margin-left: 1em;
}

#theme-switch button {
	background: none;
	border: none;
	outline: none;
	cursor: pointer;
	padding: 0;
}

#theme-switch #dark-button {
	color: #464646;
	filter: invert(26%) sepia(1%) saturate(0%) hue-rotate(331deg) brightness(94%) contrast(90%);
}

#theme-switch #light-button {
	color: #aaa;
	filter: invert(78%) sepia(17%) saturate(0%) hue-rotate(221deg) brightness(93%) contrast(98%);
}

@media screen and (max-width: 767px) {
	.main-and-sidebar-wrapper > header > section {
		padding: 10px;
		position: relative;
		/*width: 100%;*/
		box-sizing: border-box;
		/*flex: 1 0 0;*/
	}
}
/* ... */

